--- a/templates/index3_base.html
+++ b/templates/index3_base.html
@@ -31,7 +31,7 @@
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>菜单选项</h2>
+										<a href="/index3"><h2>菜单选项</h2></a>
 									</header>
 									<ul>
 										<li><a href="{% url 'onlineshop' %}">网购</a></li>
