--- a/templates/cate_reslut.html
+++ b/templates/cate_reslut.html
@@ -1,112 +1,21 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>尽搜己用</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--[if lte IE 8]><script src="static/assets/js/ie/html5shiv.js"></script><![endif]-->
-<!--		<link rel="stylesheet" href="static/assets/css/main.css" />-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="static/assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="static/assets/css/ie8.css" /><![endif]-->
-		<!--==========Dependency============-->
-<link rel="stylesheet" href="/static/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/font-awesome.min.css">
-<link rel="stylesheet" href="/static/vendors/owl-carousel/assets/owl.carousel.css">
-<link rel="stylesheet" href="/static/vendors/magnific-popup/magnific-popup.css">
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit:500">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700italic">
-<link href='https://fonts.googleapis.com/css?family=Dosis:400,200,300,500,600,800,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic">
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500italic,500,700italic,700,900,900italic' rel='stylesheet' type='text/css'>
-
-<!--==========Theme Styles==========-->
-<link href="/static/css/serach_reslutcss.css" rel="stylesheet">
-<link href="/static/css/theme/green.css" rel="stylesheet">
-		<style type="text/css">
-				.inner2 {
-		position: fixed;
-		top: 0px;
-	}
-			.inner2 {
-    padding: 1.66667em 1.66667em 1.33333em 1.66667em;
-    width: 24em;
-}
-			#menu ul a, #menu ul span {
-    border-bottom: 0;
-    color: inherit;
-    cursor: pointer;
-    display: block;
-    font-size: 0.9em;
-    padding: 0.625em 0;
-}
-			#menu ul {
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    color: #3d4449;
-
-    /* letter-spacing: 0.075em; */
-    list-style: none;
-    margin-bottom: 0;
-    padding: 0;
-    text-transform: uppercase;
-}
-			#sidebar h2 {
-    font-size: 1.38889em;
-				font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
-    color: inherit;
-
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-			#menu > ul > li {
-    border-top: solid 1px rgba(210, 215, 217, 0.75);
-    margin: 0.5em 0 0 0;
-    padding: 0.5em 0 0 0;
-}
-		</style>
-</head>
-<body class="home">
-
-<!--========== HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries ==========-->
-<!--========== WARNING: Respond.js doesn't work if you view the page via file:// ==========-->
-<!--==========[if lt IE 9]>
-    <script src="js/html5shiv.min.js"></script>
-    <script src="js/respond.min.js"></script>
-	</head>
-	<body>
-
-		<! -- Wrapper -->
-            				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-									<section class="row content-wrap">
-    <div class="container">
-        <div class="row" id="post-masonry">
-
-
-
+{% extends 'hotel_reslut.html' %}
+{% block content %}
                     <!--Blog Post-->
-                            {% for ctrip in ctriplist %}
+                            {% for cate in cates %}
             <article class="col-sm-4 post post-masonry post-format-image">
                 <div class="post-wrapper row">
                     <div class="featured-content row">
-                        <a href="{{ ctrip.href }}"><img src="http://{{ ctrip.pic_href }}" width="350" height="202" alt="" class="img-responsive"></a>
+                        <a href="http://www.mafengwo.cn{{ cate.url }}"><img src="{{ cate.imgurl }}" width="350" height="202" alt="" class="img-responsive"></a>
                     </div>
                     <div class="post-excerpt row">
                         <h5 class="post-meta">
 {#                            <a href="#" class="date">feb 17, 2016</a>#}
-                            <span class="post-author"><i>by</i><a href="#">美团</a></span>
+                            <span class="post-author"><i>by</i><a href="#">马蜂窝</a></span>
                         </h5>
-                        <h3 class="post-title"><a href="{{ ctrip.href }}">{{ ctrip.name }}</a></h3>
-                        <p>{{ ctrip.location }}</p>
+                        <h3 class="post-title"><a href="http://www.mafengwo.cn{{ cate.url }}">{{ cate.name }}</a></h3>
+                        <p>{{ cate.content }}</p>
                         <footer class="row">
-                            <h5 class="taxonomy"><i>评分:</i>{{ ctrip.score }},价格:{{ ctrip.people_num }}</h5>
+                            <h5 class="taxonomy"><i>评分:</i>{{ cate.score }}</h5>
 {#                            <div class="response-count"><img src="images/comment-icon-gray.png" alt="">5</div>#}
                         </footer>
                     </div>
@@ -114,74 +23,4 @@
             </article>
             {% endfor %}
 
-
-            <!--Blog Post-->
-                            {% for mafengwo in info %}
-            <article class="col-sm-4 post post-masonry post-format-image">
-                <div class="post-wrapper row">
-                    <div class="featured-content row">
-                        <a href="www.mafengwo.cn{{ mafengwo.url }}"><img src="{{ mafengwo.imgurl }}" width="350" height="202" alt="" class="img-responsive"></a>
-                    </div>
-                    <div class="post-excerpt row">
-                        <h5 class="post-meta">
-{#                            <a href="#" class="date">feb 17, 2016</a>#}
-                            <span class="post-author"><i>by</i><a href="#">美团</a></span>
-                        </h5>
-                        <h3 class="post-title"><a href="{{ mafengwo.url }}">{{ mafengwo.name }}</a></h3>
-                        <p>价格:{{ mafengwo.content }}</p>
-{#                        <p>地址:{{ meituan.location }}</p>#}
-                        <footer class="row">
-{#                            <h5 class="taxonomy"><i>价钱:</i><a href="#">{{ tuniu.price }}</a></h5>#}
-                            <h5 class="taxonomy">评分:{{ mafengwo.score }}</h5>
-{#                            <div class="response-count"><img src="images/comment-icon-gray.png" alt="">5</div>#}
-                        </footer>
-                    </div>
-                </div>
-            </article>
-            {% endfor %}
-
-
-        </div>
-    </div>
-</section>
-
-                        </div>
-                    </div>
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner2">
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>菜单选项</h2>
-									</header>
-									<ul>
-										<li><a href="{% url 'onlineshop' %}">网购</a></li>
-										<li><a href="{% url 'hotel' %}">酒店</a></li>
-										<li><a href="{% url 'travel' %}">旅游</a></li>
-										<li><a href="{% url 'cate' %}">美食</a></li>
-									</ul>
-								</nav>
-
-
-						</div>
-					</div>
-
-
-		<!-- Scripts -->
-			<script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-			<script src="/static/assets/js/skel.min.js"></script>
-			<script src="/static/assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="static/assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="/static/assets/js/main.js"></script>
-		<script src="/static/js/jquery-2.2.0.min.js"></script>
-		<script src="/static/js/bootstrap.min.js"></script>
-		<script src="/static/vendors/owl-carousel/owl.carousel.min.js"></script>
-		<script src="/static/vendors/magnific-popup/jquery.magnific-popup.min.js"></script>
-		<script src="/static/vendors/instafeed/instafeed.min.js"></script>
-		<script src="/static/vendors/imagesLoaded/imagesloaded.pkgd.min.js"></script>
-		<script src="/static/vendors/isotope/isotope.pkgd.min.js"></script>
-		<script src="/static/js/theme.js"></script>
-
-	</body>
-</html>
+{% endblock %}
