'添加地图导航功能'

--- a/templates/hotel_reslut.html
+++ b/templates/hotel_reslut.html
@@ -409,7 +409,7 @@
 										<li><a href="{% url 'hotel' %}">酒店</a></li>
 										<li><a href="{% url 'travel' %}">旅游</a></li>
 										<li><a href="{% url 'cate' %}">美食</a></li>
-                                        <li><a href="{% url 'navigation_relust' %}">导航</a></li>
+                                        <li><a href="{% url 'map' %}">地图</a></li>
 									</ul>
 								</nav>
 
