--- a/templates/map.html
+++ b/templates/map.html
@@ -6,8 +6,9 @@
 		body, html,#allmap {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
 	</style>
      <link rel="stylesheet" href="https://cache.amap.com/lbs/static/main1119.css"/>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" rel="stylesheet">
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=UbgpmP5FNlbvvq1q3mhcegEvzRwyoh1q"></script>
-	<title>浏览器定位</title>
+	<title>地图</title>
 </head>
 <body>
 	<div id="allmap"></div>
@@ -19,12 +20,29 @@
             </td>
         </tr>
         <tr>
-                <td>
+            <td>
         <input type="text" id="keyword" onkeypress="getKey();"/>
             </td>
         </tr>
     </table>
 </div>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container">
+<form role="form" action="{% url 'navigation' %}" method="get">
+	<div class="form-group">
+		<label for="name">标签</label>
+		<input type="text" name="origin" class="form-control" placeholder="输入你的起点">
+		<input type="text" name="destination" class="form-control" placeholder="输入你的终点">
+			<select class="form-control" name="way">
+			<option>行走</option>
+			<option>驾车</option>
+			<option>公交车</option>
+		</select>
+        <button type="submit" class="btn btn-lg btn-primary" placeholder="提交"></button>
+	</div>
+ </form>
+  </div>
+</nav>
 </body>
 </html>
 <script type="text/javascript">
@@ -95,3 +113,5 @@
 	//BMAP_STATUS_SERVICE_UNAVAILABLE	服务不可用。对应数值“7”。(自 1.1 新增)
 	//BMAP_STATUS_TIMEOUT	超时。对应数值“8”。(自 1.1 新增)
 </script>
+<script src="/static/js/jquery-1.11.3.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
