'完成地图导航功能'

--- a/templates/map.html
+++ b/templates/map.html
@@ -34,11 +34,11 @@
 		<input type="text" name="origin" class="form-control" placeholder="输入你的起点">
 		<input type="text" name="destination" class="form-control" placeholder="输入你的终点">
 			<select class="form-control" name="way">
-			<option>行走</option>
 			<option>驾车</option>
+			<option>步行</option>
 			<option>公交车</option>
 		</select>
-        <button type="submit" class="btn btn-lg btn-primary" placeholder="提交"></button>
+        <button type="submit" class="btn" >提交</button>
 	</div>
  </form>
   </div>
