'完成食品相克的搜索'

--- a/templates/index3_base.html
+++ b/templates/index3_base.html
@@ -39,6 +39,7 @@
 										<li><a href="{% url 'travel' %}">旅游</a></li>
 										<li><a href="{% url 'cate' %}">美食</a></li>
 										<li><a href="{% url 'map' %}">地图</a></li>
+										<li><a href="{% url 'food' %}">食物相克</a></li>
 									</ul>
 								</nav>
 
