--- a/templates/hotel.html
+++ b/templates/hotel.html
@@ -13,10 +13,11 @@
 <section>
 <div class="wrap-header">
 		<h1>酒店</h1>
+    <p style="color: white">有些酒店,有像家一般的感觉</p>
 		<center>
                 <section id="search" class="alt">
         <form method="get" action="{% url 'hotel_reslut' %}">
-            <input type="text" name="q" id="query" placeholder="Search" />
+            <input type="text" name="q" id="query" placeholder="搜索你寻找酒店的城市" />
             <input type="submit" name="Submit" value="Search">
         </form>
     </section>
