--- a/templates/hotel_reslut.html
+++ b/templates/hotel_reslut.html
@@ -369,7 +369,7 @@
             <article class="col-sm-4 post post-masonry post-format-image">
                 <div class="post-wrapper row">
                     <div class="featured-content row">
-                        <a href="{{ meituan.href }}"><img src="https://p0.ssl.qhimgs1.com/t014ee531771139a81c.jpg" width="350" height="202" alt="" class="img-responsive"></a>
+                        <a href="{{ meituan.href }}"><img src="/static/images/defalut_hotel_img.jpg" width="350" height="202" alt="" class="img-responsive"></a>
                     </div>
                     <div class="post-excerpt row">
                         <h5 class="post-meta">
