--- a/templates/index3.html
+++ b/templates/index3.html
@@ -22,7 +22,7 @@
 										<header>
 											<h1>尽搜己用<br />
 											by CMZZ</h1>
-											<p>一个吃穿住行的高性价比网站</p>
+											<p>一个的高性价比推荐的网站</p>
 										</header>
 										<p>我们致力于打造为人民服务的平台</p>
 										<ul class="actions">
