--- a/templates/map.html
+++ b/templates/map.html
@@ -38,7 +38,7 @@
 			<option>步行</option>
 			<option>公交车</option>
 		</select>
-        <button type="submit" class="btn" >提交</button>
+        <button type="submit" class="btn" >查询</button>
 	</div>
  </form>
   </div>
