--- a/templates/onlineshop.html
+++ b/templates/onlineshop.html
@@ -12,7 +12,8 @@
 							<!-- Content -->
 <section>
 <div class="wrap-header">
-		<h1>网购</h1>
+		<h1 style="color: #0b0b0b">网购</h1>
+    <p>有些东西买了,才知道什么是幸福</p>
 		<center>
             								<section id="search" class="alt">
 									<form method="get" action="{% url 'search_reslut' %}">
