--- a/templates/travel.html
+++ b/templates/travel.html
@@ -12,10 +12,11 @@
 	<script src="/static/js/onlineshop.js" type="text/javascript"></script>
 <div class="wrap-header">
 		<h1>旅游</h1>
+    <p style="color: white">有些地方,是真的有天堂</p>
 		<center>
                             <section id="search" class="alt">
         <form method="get" action="{% url 'travel_reslut' %}">
-            <input type="text" name="q" id="query" placeholder="Search" />
+            <input type="text" name="q" id="query" placeholder="搜索你要去的城市" />
             <input type="submit" name="Submit" value="Search">
         </form>
     </section>
